SubBt/force-app/main/default/objects/RFQ_To_Vendor__c/RFQ_To_Vendor__c.object-meta.xml
<CustomObject>
    <description>This object is used to invite vendor for RFQ process</description>
    <label>Vendor RFQ</label>
    <nameField>
        <label>Account</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vendor RFQ</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>