SubBt/force-app/main/default/objects/RFQ_To_Vendor__c/fields/Accepted_Date__c.field-meta.xml
<CustomField>
    <fullName>Accepted_Date__c</fullName>
    <inlineHelpText>Date the Vendor Accepted the RFQ.</inlineHelpText>
    <label>Accepted Date</label>
    <type>DateTime</type>
</CustomField>