SubBt/force-app/main/default/objects/RFQ_To_Vendor__c/fields/Awarded_Date__c.field-meta.xml
<CustomField>
    <fullName>Awarded_Date__c</fullName>
    <inlineHelpText>Date the RFQ was Awarded to the Vendor.</inlineHelpText>
    <label>Awarded Date</label>
    <type>Date</type>
</CustomField>