SubBt/force-app/main/default/objects/RFQ_To_Vendor__c/fields/Budget_Amount__c.field-meta.xml
<CustomField>
    <fullName>Budget_Amount__c</fullName>
    <formula>RFQ__r.Budget__r.Original_Budget__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>