SubBt/force-app/main/default/objects/RFQ_To_Vendor__c/fields/communityuserid__c.field-meta.xml
<CustomField>
    <fullName>communityuserid__c</fullName>
    <formula>if($User.Account_Id__c == Vendor__c ,true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>communityuserid</label>
    <type>Checkbox</type>
</CustomField>