SubBt/force-app/main/default/objects/RFQ_To_Vendor__c/fields/Days_Outstanding__c.field-meta.xml
<CustomField>
    <fullName>Days_Outstanding__c</fullName>
    <inlineHelpText>This is the number of days since the RFQ was Submitted.</inlineHelpText>
    <label>Days Outstanding</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>