SubBt/force-app/main/default/objects/RFQ_To_Vendor__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <formula>RFQ__r.Due_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RFQ Due Date</label>
    <type>Date</type>
</CustomField>