SubBt/force-app/main/default/objects/RFQ_To_Vendor__c/fields/Estimated_Work_Rollup__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Work_Rollup__c</fullName>
    <label>Estimated Work Rollup (Days)</label>
    <summarizedField>RFQ_Vendor_Item__c.Estimated_Work_Days__c</summarizedField>
    <summaryForeignKey>RFQ_Vendor_Item__c.Vendor__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>