SubBt/force-app/main/default/objects/RFQ_To_Vendor__c/fields/isCommunityUser__c.field-meta.xml
<CustomField>
    <fullName>isCommunityUser__c</fullName>
    <defaultValue>false</defaultValue>
    <description>checking if the vendor has community login access or not!</description>
    <label>isCommunityUser</label>
    <type>Checkbox</type>
</CustomField>