SubBt/force-app/main/default/objects/RFQ_To_Vendor__c/fields/Open_RFI__c.field-meta.xml
<CustomField>
    <fullName>Open_RFI__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Open RFI&apos;s</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>