SubBt/force-app/main/default/objects/RFQ_To_Vendor__c/fields/Order_By_Skip_zero__c.field-meta.xml
<CustomField>
    <fullName>Order_By_Skip_zero__c</fullName>
    <formula>IF(Quote_Amount__c &gt; 0, &apos;A&apos;, &apos;Z&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order By Skip zero</label>
    <type>Text</type>
</CustomField>