SubBt/force-app/main/default/objects/RFQ_To_Vendor__c/fields/Pricing_Request_Line__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Request_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pricing Request Line</label>
    <referenceTo>Pricing_Request_Line__c</referenceTo>
    <relationshipLabel>Vendor RFQ</relationshipLabel>
    <relationshipName>Vendor_RFQ</relationshipName>
    <type>Lookup</type>
</CustomField>