SubBt/force-app/main/default/objects/RFQ_To_Vendor__c/fields/Quote_Amount__c.field-meta.xml
<CustomField>
    <fullName>Quote_Amount__c</fullName>
    <label>Quote Amount</label>
    <summarizedField>RFQ_Vendor_Item__c.Total_Price__c</summarizedField>
    <summaryForeignKey>RFQ_Vendor_Item__c.Vendor__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>