SubBt/force-app/main/default/objects/RFQ_To_Vendor__c/fields/QuoteAmountText__c.field-meta.xml
<CustomField>
    <fullName>QuoteAmountText__c</fullName>
    <formula>TEXT(Quote_Amount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QuoteAmountText</label>
    <type>Text</type>
</CustomField>