SubBt/force-app/main/default/objects/RFQ_To_Vendor__c/fields/Quoting__c.field-meta.xml
<CustomField>
    <fullName>Quoting__c</fullName>
    <inlineHelpText>This indicates whether or not the Vendor is going to participate in the Quoting process.</inlineHelpText>
    <label>Quoting?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>