SubBt/force-app/main/default/objects/RFQ_To_Vendor__c/fields/RFQ__c.field-meta.xml
<CustomField>
    <fullName>RFQ__c</fullName>
    <label>RFQ</label>
    <referenceTo>RFQ__c</referenceTo>
    <relationshipName>RFQ_To_Vendors</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>