SubBt/force-app/main/default/objects/RFQ_To_Vendor__c/fields/RFQ_Name__c.field-meta.xml
<CustomField>
    <fullName>RFQ_Name__c</fullName>
    <formula>RFQ__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RFQ Name</label>
    <type>Text</type>
</CustomField>