SubBt/force-app/main/default/objects/RFQ_To_Vendor__c/fields/RFQ_Status__c.field-meta.xml
<CustomField>
    <fullName>RFQ_Status__c</fullName>
    <formula>TEXT(RFQ__r.Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RFQ Status</label>
    <type>Text</type>
</CustomField>