SubBt/force-app/main/default/objects/RFQ_To_Vendor__c/fields/Send_Invitation__c.field-meta.xml
<CustomField>
    <fullName>Send_Invitation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to send invitation to selected vendors.</description>
    <label>Send Invitation</label>
    <type>Checkbox</type>
</CustomField>