SubBt/force-app/main/default/objects/RFQ_To_Vendor__c/fields/Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>Submitted_Date__c</fullName>
    <description>This is the date the RFQ was emailed to the Vendor for quote.</description>
    <inlineHelpText>This is the date the RFQ was emailed to the Vendor for quote.</inlineHelpText>
    <label>Submitted Date</label>
    <type>DateTime</type>
</CustomField>