SubBt/force-app/main/default/objects/RFQ_To_Vendor__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>RFQ_To_Vendors</relationshipName>
    <type>Lookup</type>
</CustomField>