SubBt/force-app/main/default/objects/RFQ_To_Vendor__c/listViews/Accepted.listView-meta.xml
<ListView>
    <fullName>Accepted</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Accepted</value>
    </filters>
    <label>Accepted</label>
</ListView>