SubBt/force-app/main/default/objects/RFQ_To_Vendor__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RFQ__c</columns>
    <columns>Status__c</columns>
    <columns>Quote_Amount__c</columns>
    <columns>Notes__c</columns>
    <columns>Submitted_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>