SubBt/force-app/main/default/objects/RFQ_To_Vendor__c/listViews/Awarded.listView-meta.xml
<ListView>
    <fullName>Awarded</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Awarded</value>
    </filters>
    <label>Awarded</label>
</ListView>