SubBt/force-app/main/default/objects/RFQ_To_Vendor__c/listViews/Canceled.listView-meta.xml
<ListView>
    <fullName>Canceled</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Canceled</value>
    </filters>
    <label>Canceled</label>
</ListView>