SubBt/force-app/main/default/objects/RFQ_To_Vendor__c/listViews/Email_Sent.listView-meta.xml
<ListView>
    <fullName>Email_Sent</fullName>
    <columns>NAME</columns>
    <columns>RFQ__c</columns>
    <columns>Status__c</columns>
    <columns>Quote_Amount__c</columns>
    <columns>Notes__c</columns>
    <columns>Submitted_Date__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Email Sent</value>
    </filters>
    <label>Email Sent</label>
</ListView>