SubBt/force-app/main/default/objects/RFQ_To_Vendor__c/listViews/Quote_Submitted.listView-meta.xml
<ListView>
    <fullName>Quote_Submitted</fullName>
    <columns>NAME</columns>
    <columns>RFQ__c</columns>
    <columns>Status__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Quote Submitted</value>
    </filters>
    <label>Quote Submitted</label>
</ListView>