SubBt/force-app/main/default/objects/RFQ_To_Vendor__c/listViews/Rejected.listView-meta.xml
<ListView>
    <fullName>Rejected</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Rejected</value>
    </filters>
    <label>Rejected</label>
</ListView>